objects/Inventory__c.object
<CustomObject><fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instrumentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laparoscopes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Preference_Card__c</fullName>
        <label>Preference Card</label>
        <referenceTo>Preference_Card__c</referenceTo>
        <relationshipLabel>Inventories</relationshipLabel>
        <relationshipName>Inventories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Inventory</label><nameField>
        <label>Inventory Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Inventories</pluralLabel><sharingModel>ControlledByParent</sharingModel><startsWith>Vowel</startsWith></CustomObject>